--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body{
 	background-color:#aa0000;
 }
-#mainmenu{
-	max-width:80%;
+.mainmenu{
+	max-width:500px;
 	min-width:300px;
 	background-color:#aa0000;
+	list-style-type: none;
 }
 .mainmenu li{
 	padding:15px;
