--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 body{
 	background-color:#000000;
+	width:100%;
+}
+h1{
+	font-size:2em;
+	color:white;
+	font-weight:bold;
+	font-family:Verdana, Arial;
+}
+.logo{
+	max-width:100%;
 }
 .menu{
 	max-width:80%;
